--- a/test_1/gaytest.html
+++ b/test_1/gaytest.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<h1>Seth Rhodes is A Web Master</h1>
-	<h2>This is all gibberish to create a test here. Please contact me <a href="sethdrhodes@gmail.com">here.</a></h2>
+	<h2>This is all gibberish to create a test here. Please contact me <a href="sethdrhodes@gmail.? subject=hello, awesome!">here</a>.</h2>
 
 
 </head>
 <body>
-
 </body>
 </html>
