--- a/test_1/gaytest.html
+++ b/test_1/gaytest.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<h1>Seth Rhodes is A Web Master</h1>
-	<h2>This is all gibberish to create a test here. Please contact me <a href="sethdrhodes@gmail.? subject=hello, awesome!">here</a>.</h2>
-
-
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 <body>
+	<h1>Seth Rhodes is A Web Master</h1>
+	<h2>This is all gibberish to create a test here. Please contact me <a href="sethdrhodes@gmail.? subject=hello, awesome!">here</a>.</h2>
 </body>
 </html>
