--- a/test_1/gaytest.html
+++ b/test_1/gaytest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<link rel="stylesheet" type="text/css" href="css2/style2.css">
 </head>
 <body>
 	<h1>Seth Rhodes is A Web Master</h1>
